# mlstarterpack

./: .gitignore  .pylintrc  .readthedocs.yml  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
cmds/: check.sh
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/mlstarterpack/: __init__.py  dirs.py  serialization.py
src/mlstarterpack/data/: __init__.py  datasets.py  tensorflow.py
src/mlstarterpack/ecdata/: __init__.py  _tabular.py  check.py  import.py  remove_blacklisted.py  sample.py  utils.py
src/mlstarterpack/models/: __init__.py  checkpoints.py  dir_serializable_model.py  tensorflow.py
src/mlstarterpack/tools/: dupbrowser.py  dupfinder.py  embedder.py  hashdupfinder.py  regr_annotator.py
src/mlstarterpack/vision/: __init__.py  bmp.py  image_layout.py  images.py  tensorflow.py
tests/: test_mlstarterpack.py
